--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
